--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<h1>Listing products</h1>
+<h1>Walmart API</h1>
 
-<form action="">
-  <button>Categories</button>
-  <input placeholder="Find products" type="search" name="searchProduct">
-  <input type="submit">
-</form>
 
