--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>Walmart API</h1>
 
+<ul>
+  <li> <a [routerLink]="['home']"> Home </a> </li>
+  <li> <a [routerLink]="['show-products']"> Products </a> </li>
+</ul>
 
+<router-outlet></router-outlet>  
