--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,9 @@
-<p>
-  products works!
-</p>
+<h3>Products should be here</h3>
+
+<button (click)="getAnItem()">Get Item</button>
+<p>{{ items | json }} </p>
+
+<!-- <pre>{{items.name}}</pre>
+<pre>{{items.upc}}</pre>
+<pre>{{items.categoryPath}}</pre> -->
+
