added skin care category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>Walmart API</h1>
 <ul>
   <li> <a [routerLink]="['/']"> Home </a> </li>
-  <li> <a [routerLink]="['show-products']"> Products </a> </li>
+  <li> <a [routerLink]="['categories']"> Categories</a></li>
+  
 </ul>
 
 <router-outlet></router-outlet>  
