--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,5 @@
-<h3>Products should be here</h3>
+<br>
+<h3>Breads</h3>
 
 <div *ngFor="let items of items">
     <li>Categoria: {{items.categoryPath}}</li>
