--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,8 +1,8 @@
 <li> <a [routerLink]="['../show-products']"> Bakery </a> </li>
 <li> <a [routerLink]="['../skin-care']"> Skin Care </a></li>
-<li> <a [routerLink]="['../skin-care']"> Electronics </a></li>
-<li> <a [routerLink]="['../skin-care']"> Babies </a></li>
-<li> <a [routerLink]="['../skin-care']"> Clothes </a></li>
-<li> <a [routerLink]="['../skin-care']"> Make up </a></li>
+<li> <a [routerLink]="['../electronics']">Electronics</a></li>
+<li> <a [routerLink]="['../baby']"> Baby </a></li>
+<li> <a [routerLink]="['../clothes']"> Clothes </a></li>
+<li> <a [routerLink]="['../make-up']"> Make up </a></li>
 
 
