--- a/src/app/electronics/electronics.component.html
+++ b/src/app/electronics/electronics.component.html
@@ -1,13 +1,13 @@
 <p>
-  skin-care works!
+  electronics works!
 </p>
 
 <div *ngFor="let items of items">
   <ul>
     <li>{{items.name}}</li>
     <li>{{items.salePrice}}</li>
+    <li>{{items.shortDescription}}</li>
     <li><img src="{{items.thumbnailImage}}" alt=""></li>
-    <li><p>{{items.shortDescription}}</p></li>
   </ul>
 
 </div>
