got products by id

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -6,10 +6,10 @@
 <li> <a [routerLink]="['../make-up']"> Make up </a></li>
 
 
-<div *ngFor="let items of items">
+<!-- <div *ngFor="let items of items">
 <ul>
   <li>{{items.name}}</li>
   <li>{{items.salePrice}}</li>
   <li> <img src="{{items.thumbnailImage}}" alt=""></li>
 </ul>
-</div>
+</div> -->
