--- a/src/app/electronics/electronics.component.html
+++ b/src/app/electronics/electronics.component.html
@@ -4,6 +4,7 @@
 
 <div *ngFor="let items of items">
   <ul>
+      <a [routerLink]="['../', items.itemId]"> <p>{{items.name}}</p></a>
     <li>{{items.name}}</li>
     <li>{{items.salePrice}}</li>
     <li>{{items.shortDescription}}</li>
