--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <ul>
   <li> <a [routerLink]="['/']"> Home </a> </li>
   <li> <a [routerLink]="['categories']"> Categories</a></li>
+  <li> <a [routerLink]="['departments']"> All departments</a></li>
 </ul>
 
 <router-outlet></router-outlet>  
