added best sellers

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -5,11 +5,11 @@
 <li> <a [routerLink]="['../clothes']"> Clothes </a></li>
 <li> <a [routerLink]="['../make-up']"> Make up </a></li>
 
-
-<!-- <div *ngFor="let items of items">
+<h2>Best Sellers </h2>
+<div *ngFor="let items of items">
 <ul>
   <li>{{items.name}}</li>
   <li>{{items.salePrice}}</li>
   <li> <img src="{{items.thumbnailImage}}" alt=""></li>
 </ul>
-</div> -->
+</div>
