--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<h1>Walmart API</h1>
-<ul>
-  <li> <a [routerLink]="['/']"> Home </a> </li>
-  <li> <a [routerLink]="['categories']"> Categories</a></li>
-  <li> <a [routerLink]="['departments']"> All departments</a></li>
-</ul>
-
-<router-outlet></router-outlet>  
+<body>
+    <h1>Walmart API</h1>
+    <ul>
+      <li> <a [routerLink]="['/']"> Home </a> </li>
+      <li> <a [routerLink]="['categories']"> Categories</a></li>
+      <li> <a [routerLink]="['departments']"> All departments</a></li>
+    </ul>
+    
+    <router-outlet></router-outlet>  
+    
+    
+  
+</body>
 
