--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: rgb(5, 235, 252);
+}
+
+a:link{
+  text-decoration: none;
+}
+
