--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <body>
-    <h1>Walmart API</h1>
+  <img src="../assets/walmart-logo.png" alt="" width="200px">
+    <section id="menu"> 
     <ul>
-      <li> <a [routerLink]="['/']"> Home </a> </li>
-      <li> <a [routerLink]="['categories']"> Categories</a></li>
-      <li> <a [routerLink]="['departments']"> All departments</a></li>
+        <button><li> <a [routerLink]="['/']"> Home </a> </li> </button> 
+        <button><li> <a [routerLink]="['categories']"> Categories</a></li> </button> 
+        <button><li> <a [routerLink]="['departments']"> All departments</a></li> </button> 
     </ul>
+  </section>
     
     <router-outlet></router-outlet>  
     
