--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
         <button><li> <a [routerLink]="['departments']"> All departments</a></li> </button> 
     </ul>
   </section>
+  <section id="main">
+
+  </section>
     
     <router-outlet></router-outlet>  
     
