--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,9 +1,9 @@
-<li> <a [routerLink]="['../show-products']"> Bakery </a> </li>
-<li> <a [routerLink]="['../skin-care']"> Skin Care </a></li>
-<li> <a [routerLink]="['../electronics']">Electronics</a></li>
-<li> <a [routerLink]="['../baby']"> Baby </a></li>
-<li> <a [routerLink]="['../clothes']"> Clothes </a></li>
-<li> <a [routerLink]="['../make-up']"> Make up </a></li>
+  <li> <button> <a [routerLink]="['../show-products']">Bakery </a>  </button>    </li> 
+  <li> <button> <a [routerLink]="['../skin-care']">Skin Care </a> </button>    </li> 
+  <li> <button> <a [routerLink]="['../electronics']">Electronics</a> </button>    </li> 
+  <li> <button> <a [routerLink]="['../baby']"> Baby </a> </button>    </li> 
+  <li> <button> <a [routerLink]="['../clothes']"> Clothes </a> </button>    </li> 
+  <li> <button> <a [routerLink]="['../make-up']"> Make up </a> </button>    </li> 
 
 <h2>Best Sellers </h2>
 <div *ngFor="let items of items">
