--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -1,7 +1,3 @@
-<p>
-  departments works!
-</p>
-
 <div *ngFor="let categories of categories">
-<li><a [routerLink]="['../', categories.id]">{{categories.name}}</a> </li>
+<li> <button><a [routerLink]="['../', categories.id]">{{categories.name}}</a> </button> </li>
 </div>
