--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,6 +1,12 @@
+body{
+  padding: 0 10em;
+  font-family: 'OpenSansRegular',Verdana,Arial,Helvetica,sans-serif;
+  font-size: 14px;
+}
+
 li > img {
   position: relative;
-  left:130px;
+  left:40px;
   top:40px;
 }
 
@@ -8,11 +14,38 @@ li{
   list-style: none;
 }
 
+li:nth-last-child(3){
+  float: right;
+}
+
 div{
-  width: 400px;
-  height: 250px;
+  width: 187px;
+  height: 428px;
   float: left;
   text-align: left;
-  border: 1px solid gray;
-  padding: 5px;
+  border: 1px solid #d4d4d4;
+  padding: 20px;
+  margin: 0;
+  color: #1a75cf;
+}
+
+div:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
+
+button{
+  width: 150px;
+  height: 50px;
+  background-color: #5fbb3f;
+  border-radius: 5px;
+  font-size: 14px;
+  position: relative;
+  top: 10px;
+  left:15px;
+  
+}
+
+a{
+  color: white;
 }
