search-bar styled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <body>
   <img src="../assets/walmart-logo.png" alt="" width="200px">
   <section id="menu">
-    <div>
+    <div class="search-bar">
       <input placeholder="¿Qué estas buscando?" type="text" name="find">
-      <input placeholder="" type="submit" name="go">
+      <button type="submit"><span><i class="fa fa-search"></i></span> </button> 
     </div>
     <ul>
       <button>
