--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,4 +21,27 @@ a{
   color: white;
 }
 
+input[name=find]{
+  padding: 10px;
+  width: 550px;
+  border: 1px solid #005aa2;
+  border-radius: 5px;
+}
 
+.search-bar > button{
+  background-color: #005aa2;
+  padding: 10px;
+  color: white;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-left: -10px;
+  position: absolute;
+  bottom: -10px;
+  left: 578px;
+}
+
+.search-bar{
+position: absolute;
+top: 20px;
+left: 400px;
+}
