--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <body>
   <img src="../assets/walmart-logo.png" alt="" width="200px">
   <section id="menu">
-    <div class="search-bar">
-      <input placeholder="¿Qué estas buscando?" type="text" name="find">
+    <!-- <div class="search-bar">
+      <input placeholder="¿Qué estas buscando?" type="text" [(ngModel)]="search">
       <button type="submit"><span><i class="fa fa-search"></i></span> </button> 
-    </div>
+    </div> -->
     <ul>
       <button>
         <li>
